Responsive grid fix - stopped conatining element from collapsing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,7 +8,9 @@
 
 	.grid,
 	.grid-right {
+		display: block;
 		float: none;
+		width: 100%;
 	}
 
 	.copyright,
