--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,6 @@ sub {
 .col-700,
 .col-780,
 .col-860 {
-	display: inline;
 	margin-right: 2.127659574468%;
 }
 
